Tree no longer stretches to fill available space

--- a/Site/ClientApp/src/components/TechTree.css
+++ b/Site/ClientApp/src/components/TechTree.css
@@ -1,4 +1,11 @@
 .techTree {
     display: grid;
     grid-gap: 0.5em;
+
+
+    justify-content: center;
+    align-content: center;
+
+    justify-items: flex-start;
+    align-items: flex-start;
 }
