--- a/Site/ClientApp/src/components/TreeBuilding.css
+++ b/Site/ClientApp/src/components/TreeBuilding.css
@@ -3,7 +3,7 @@
     grid-template-columns: 5em 1fr;
     grid-template-rows: 1em 5em 1fr;
 
-    min-width: 12em;
+    min-width: 10em;
     min-height: 5em;
 
     grid-template-areas: 
